# CSPH

./: CMakeLists.txt  README.md
sph_compressible/: CMakeLists.txt  ChFsiDefinitionsSPH_compressible.h  ChFsiFluidSystemSPH_compressible.cpp  ChFsiFluidSystemSPH_compressible.h  ChFsiInterfaceSPH_compressible.cpp  ChFsiInterfaceSPH_compressible.h  ChFsiParamsSPH_compressible.h  ChFsiProblemSPH_compressible.cpp  ChFsiProblemSPH_compressible.h  ChFsiSystemSPH_compressible.cpp  ChFsiSystemSPH_compressible.h  TODO_sph.txt
sph_compressible/math/: CustomMath_compressible.cuh
sph_compressible/physics/: BceManager_compressible.cu  BceManager_compressible.cuh  CollisionSystem_compressible.cu  CollisionSystem_compressible.cuh  FluidDynamics_compressible.cu  FluidDynamics_compressible.cuh  FsiDataManager_compressible.cu  FsiDataManager_compressible.cuh  FsiForce_base.cu  FsiForce_base.cuh  FsiForce_compressible.cu  FsiForce_compressible.cuh  FsiParticleRelocator_compressible.cu  FsiParticleRelocator_compressible.cuh  SphGeneral_compressible.cu  SphGeneral_compressible.cuh
sph_compressible/utils/: UtilsDevice_compressible.cuh  UtilsPrintSph_compressible.cu  UtilsPrintSph_compressible.cuh
sph_compressible/visualization/: ChFsiVisualizationVSG_compressible.cpp  ChFsiVisualizationVSG_compressible.h
test_compressibility/: CMakeLists.txt  Test_blast_wave_1D.cpp  Test_blast_wave_1D_smoothed.cpp  Test_compressible.cpp  Test_shock_tube_1D.cpp  Test_shock_tube_1D_smoothed.cpp  Test_shock_tube_1D_v2.cpp  Test_shock_tube_2D.cpp  Test_shock_tube_3D.cpp  Test_shock_tube_3D_variable_mass.cpp  Uniform_flow_compressible.cpp  Uniform_flow_compressible_ChProblem.cpp
